Create Service class and implement usecase exit & enter

--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="log4net" Version="2.0.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ServiceLayer\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ServiceLayer\" />
+  </ItemGroup>
 </Project>
