--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -59,7 +59,7 @@
         <Compile Include="DomainLayer\User\UserFacade.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SadnaExpressException.cs" />
+        <Compile Include="SadnaException.cs" />
         <Compile Include="ServiceLayer\Server.cs" />
         <Compile Include="ServiceLayer\Tradingsystem.cs" />
         <Compile Include="Services\IPaymentService.cs" />
