--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SadnaException.cs" />
+    <Compile Include="ServiceLayer\Response.cs" />
+    <Compile Include="ServiceLayer\ResponseT.cs" />
     <Compile Include="ServiceLayer\Server.cs" />
     <Compile Include="ServiceLayer\ServiceObjects\S_Member.cs" />
     <Compile Include="ServiceLayer\ServiceObjects\S_Store.cs" />
