1. UPDATE files is csproj to see them when open code 2. add proxybridge and ITradingSystem

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *.cache
 *.vsidx
 *.wsuo
+*.dll
 obj
 bin
+/src/Version 1/packages/MSTest.TestFramework.2.2.7
+/src/Version 1/.vs/SadnaExpress/v17/TestStore/0
+/src/Version 1/packages/MSTest.TestAdapter.2.2.7
