--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -58,6 +58,9 @@
     <Compile Include="DomainLayer\User\User.cs" />
     <Compile Include="DomainLayer\User\UserFacade.cs" />
     <Compile Include="Program.cs" />
+	<Compile Include="Logger.cs" />
+	<Compile Include="ServiceLayer\Response.cs" />
+		<Compile Include="ServiceLayer\ResponseT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SadnaException.cs" />
     <Compile Include="ServiceLayer\Server.cs" />
@@ -65,6 +68,8 @@
     <Compile Include="ServiceLayer\ServiceObjects\S_Store.cs" />
     <Compile Include="ServiceLayer\ServiceObjects\S_User.cs" />
     <Compile Include="ServiceLayer\TradingSystem.cs" />
+	<Compile Include="ServiceLayer\ITradingSystem.cs" />
+		<Compile Include="ServiceLayer\ProxyBridge.cs" />
     <Compile Include="Services\IPaymentService.cs" />
     <Compile Include="Services\ISupplierService.cs" />
   </ItemGroup>
