--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Unit Tests\ShoppingCartUnitTest.cs" />
     <Compile Include="Mocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit Tests\TradingSystemUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
