--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="Acceptance Tests\TradingSystemAcceptanceTest.cs" />
     <Compile Include="Acceptance Tests\User\RegisterAcceptanceTest.cs" />
-    <Compile Include="Acceptance Tests\User\RegisterAcceptanceTest.cs" />
+    <Compile Include="Acceptance Tests\User\LoginAcceptanceTest.cs" />
     <Compile Include="Acceptance Tests\Store\AddStoreAcceptanceTest.cs" />
     <Compile Include="Acceptance Tests\Purchase\ProductSearchAcceptanceTest.cs" />
     <Compile Include="Integration Tests\UserIntegrationTest.cs" />
@@ -61,6 +61,7 @@
     <Compile Include="Mocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit Tests\TradingSystemUnitTests.cs" />
+    <Compile Include="Unit Tests\UserFacadeUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
