--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -50,20 +50,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Acceptance Tests\System\InitializationOfTradingSystem.cs" />
-    <Compile Include="Acceptance Tests\System\Payment.cs" />
-    <Compile Include="Acceptance Tests\System\Supply.cs" />
     <Compile Include="Acceptance Tests\TradingSystemAT.cs" />
-    <Compile Include="Acceptance Tests\User\Register.cs" />
-    <Compile Include="Acceptance Tests\User\Login.cs" />
-    <Compile Include="Acceptance Tests\Store\AddStoreAcceptanceTest.cs" />
-    <Compile Include="Acceptance Tests\Purchase\ProductSearchAcceptanceTest.cs" />
-    <Compile Include="Integration Tests\UserIntegrationTest.cs" />
+    <Compile Include="Acceptance Tests\UserAT.cs" />
+    <Compile Include="Acceptance Tests\ItemAT.cs" />
+    <Compile Include="Acceptance Tests\StoreAT.cs" />
+    <Compile Include="Acceptance Tests\EmployeeAT.cs" />
     <Compile Include="Unit Tests\StoreUnitTest.cs" />
     <Compile Include="Unit Tests\ShoppingCartUnitTest.cs" />
     <Compile Include="Mocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit Tests\TradingSystemUnitTest.cs" />
+    <Compile Include="Unit Tests\StoreFacadeUnitTest.cs" />
     <Compile Include="Unit Tests\UserFacadeUnitTest.cs" />
     <Compile Include="Unit Tests\UserUnitTest.cs" />
   </ItemGroup>
@@ -76,7 +72,9 @@
       <Name>SadnaExpress</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Integration Tests\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
