fix flow of external services and unit tests accordingly

--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Unit Tests\ShoppingCartUnitTest.cs" />
     <Compile Include="Mocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit Tests\TradingSystemUnitTest.cs" />
+    <Compile Include="Unit Tests\StoreFacadeUnitTest.cs" />
     <Compile Include="Unit Tests\UserFacadeUnitTest.cs" />
     <Compile Include="Unit Tests\UserUnitTest.cs" />
   </ItemGroup>
