--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -60,24 +60,20 @@
     <Compile Include="DomainLayer\User\User.cs" />
     <Compile Include="DomainLayer\User\UserFacade.cs" />
     <Compile Include="Program.cs" />
-	<Compile Include="Logger.cs" />
-	<Compile Include="ServiceLayer\IStoreManager.cs" />
-	<Compile Include="ServiceLayer\IUserManager.cs" />
-	<Compile Include="ServiceLayer\Response.cs" />
-		<Compile Include="ServiceLayer\ResponseT.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="ServiceLayer\IStoreManager.cs" />
+    <Compile Include="ServiceLayer\IUserManager.cs" />
+    <Compile Include="ServiceLayer\Response.cs" />
+    <Compile Include="ServiceLayer\ResponseT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\Server.cs" />
-    <Compile Include="ServiceLayer\ServiceObjects\S_Item.cs" />
-    <Compile Include="ServiceLayer\ServiceObjects\S_Member.cs" />
-    <Compile Include="ServiceLayer\ServiceObjects\S_Store.cs" />
-    <Compile Include="ServiceLayer\ServiceObjects\S_User.cs" />
     <Compile Include="ServiceLayer\StoreManager.cs" />
     <Compile Include="ServiceLayer\TradingSystem.cs" />
-	<Compile Include="ServiceLayer\ITradingSystem.cs" />
-		<Compile Include="ServiceLayer\ProxyBridge.cs" />
-		<Compile Include="ServiceLayer\UserManager.cs" />
-    <Compile Include="Services\IPaymentService.cs" />
-    <Compile Include="Services\ISupplierService.cs" />
+    <Compile Include="ServiceLayer\ITradingSystem.cs" />
+    <Compile Include="ServiceLayer\ProxyBridge.cs" />
+    <Compile Include="ServiceLayer\UserManager.cs" />
+    <Compile Include="ExternalServices\IPaymentService.cs" />
+    <Compile Include="ExternalServices\ISupplierService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
