--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -56,13 +56,14 @@
     <Compile Include="Acceptance Tests\ItemAT.cs" />
     <Compile Include="Acceptance Tests\StoreAT.cs" />
     <Compile Include="Acceptance Tests\EmployeeAT.cs" />
-    <Compile Include="Unit Tests\StoreUnitTest.cs" />
-    <Compile Include="Unit Tests\ShoppingCartUnitTest.cs" />
+    <Compile Include="Unit Tests\ShppingBasketUT.cs" />
+    <Compile Include="Unit Tests\StoreFacadeUT.cs" />
     <Compile Include="Mocks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit Tests\StoreFacadeUnitTest.cs" />
-    <Compile Include="Unit Tests\UserFacadeUnitTest.cs" />
-    <Compile Include="Unit Tests\UserUnitTest.cs" />
+    <Compile Include="Unit Tests\InventoryUT.cs" />
+    <Compile Include="Unit Tests\ShoppingCartUT.cs" />
+    <Compile Include="Unit Tests\UserFacadeUT.cs" />
+    <Compile Include="Unit Tests\UserUT.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
