implement UT for orders+make base to cart+littles changes in order

--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DomainLayer\Store\IStoreFacade.cs" />
     <Compile Include="DomainLayer\Store\Item.cs" />
     <Compile Include="DomainLayer\Store\Order.cs" />
+    <Compile Include="DomainLayer\Store\Orders.cs" />
     <Compile Include="DomainLayer\User\ShoppingBasket.cs" />
     <Compile Include="DomainLayer\User\ShoppingCart.cs" />
     <Compile Include="DomainLayer\Store\Store.cs" />
