--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Acceptance Tests\ItemAT.cs" />
     <Compile Include="Acceptance Tests\StoreAT.cs" />
     <Compile Include="Acceptance Tests\EmployeeAT.cs" />
+    <Compile Include="Unit Tests\OrderUT.cs" />
     <Compile Include="Unit Tests\ShppingBasketUT.cs" />
     <Compile Include="Unit Tests\StoreFacadeUT.cs" />
     <Compile Include="Mocks.cs" />
