create IOrders interface and make the store facade hold it. create orders mock impl of AT 3.3

--- a/src/Version 1/SadnaExpress/SadnaExpress.csproj
+++ b/src/Version 1/SadnaExpress/SadnaExpress.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DomainLayer\Store\Inventory.cs" />
+    <Compile Include="DomainLayer\Store\IOrders.cs" />
     <Compile Include="DomainLayer\Store\IStoreFacade.cs" />
     <Compile Include="DomainLayer\Store\Item.cs" />
     <Compile Include="DomainLayer\Store\ItemForOrder.cs" />
