--- a/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/Version 1/SadnaExpressTests/SadnaExpressTests.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Acceptance Tests\TradingSystemAT.cs" />
     <Compile Include="Acceptance Tests\GuestVisitorAT.cs" />
     <Compile Include="Acceptance Tests\GuestMemberAT.cs" />
-    <Compile Include="Acceptance Tests\GuestMemberStoreOwner.cs" />
+    <Compile Include="Acceptance Tests\GuestMemberStoreOwnerManagerAT.cs" />
     <Compile Include="Acceptance Tests\GuestAT.cs" />
     <Compile Include="Integration Tests\PurchaseIT.cs" />
     <Compile Include="Unit Tests\OrderUT.cs" />
@@ -79,9 +79,7 @@
       <Name>SadnaExpress</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Integration Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
