--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ bin
 /src/Version 1/packages/MSTest.TestFramework.2.2.7
 /src/Version 1/.vs/SadnaExpress/v17/TestStore/0
 /src/Version 1/packages/MSTest.TestAdapter.2.2.7
+/src/Version 1/.vs/SadnaExpress/config
