--- a/src/sadna-front/package.json
+++ b/src/sadna-front/package.json
@@ -11,12 +11,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-promise-tracker": "^2.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "web-vitals": "^2.1.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
