--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\ClientRequests\ClientRequest.cs" />
+    <Compile Include="API\ClientRequests\LoginRequest.cs" />
+    <Compile Include="API\ClientRequests\RegisterRequest.cs" />
     <Compile Include="API\Controllers\AdminController.cs" />
     <Compile Include="API\Controllers\APIConstants.cs" />
     <Compile Include="API\Controllers\GuestController.cs" />
