--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -88,6 +88,8 @@
     <Compile Include="DomainLayer\User\PasswordHash.cs" />
     <Compile Include="DomainLayer\User\User.cs" />
     <Compile Include="DomainLayer\User\UserFacade.cs" />
+    <Compile Include="ExternalServices\PaymentService.cs" />
+    <Compile Include="ExternalServices\SupplierService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="ServiceLayer\IStoreManager.cs" />
