support signalR and real time notifications

--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -55,6 +55,8 @@
     <Compile Include="API\Controllers\MemberController.cs" />
     <Compile Include="API\ServerConfig.cs" />
     <Compile Include="API\ServerServiceHost.cs" />
+    <Compile Include="API\WebClient\SignalR\NotificationHub.cs" />
+    <Compile Include="API\WebClient\SignalR\NotificationNotifier.cs" />
     <Compile Include="API\WebClient\SignalR\SignalRServerConfig.cs" />
     <Compile Include="API\WebClient\SignalR\SignalRServiceHost.cs" />
     <Compile Include="API\WebClient\WebClientServer\WebClientServerConfig.cs" />
@@ -112,6 +114,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Cors" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR">
+      <Version>2.4.3</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.9" />
