--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLayer\Server.cs" />
     <Compile Include="ServiceLayer\SModels\SMember.cs" />
+    <Compile Include="ServiceLayer\SModels\SPolicy.cs" />
     <Compile Include="ServiceLayer\SModels\SPermission.cs" />
     <Compile Include="ServiceLayer\SModels\SReview.cs" />
     <Compile Include="ServiceLayer\StoreManager.cs" />
