--- a/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Acceptance Tests\GuestMemberAT.cs" />
     <Compile Include="Acceptance Tests\GuestMemberStoreOwnerManagerAT.cs" />
     <Compile Include="Acceptance Tests\GuestAT.cs" />
+    <Compile Include="Integration Tests\CheckPurchaseConditionIT.cs" />
     <Compile Include="Integration Tests\EditStoreInventoryIT.cs" />
     <Compile Include="Integration Tests\GetCartItemsIT.cs" />
     <Compile Include="Integration Tests\PurchaseIT.cs" />
