--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -8,4 +8,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<appSettings>
+		<add key="Host" value="localhost"/>
+		<add key="ApiPort" value="8080"/>
+		<add key="SignalRPort" value="8081"/>
+		<add key="DataBaseServer" value="SQL5110.site4now.net"/>
+		<add key="DataBaseName" value="db_a995b0_sadnadbregister1"/>
+		<add key="DataBaseUIdAuthentication" value="db_a995b0_sadnadbregister1_admin"/>
+		<add key="DataBasePwdAuthentication" value="Sadna123"/>
+		<add key="PaymentServiceURL" value="https://php-server-try.000webhostapp.com/"/>
+		<add key="SupplierServiceURL" value="https://php-server-try.000webhostapp.com/"/>
+		<add key="SystemManagerEmail" value="RotemSela@gmail.com"/>
+		<add key="SystemManagerFirstName" value="Rotem"/>
+		<add key="SystemManagerLastName" value="Sela"/>
+		<add key="SystemManagerPass" value="AS87654askj"/>
+		<add key="InitTradingSystem" value="True"/>
+	</appSettings>
+	<connectionStrings>
+		<add name="MasterConnectionString" connectionString="Server=SQL5110.site4now.net;Database=db_a995b0_sadnadbregister1;Uid=db_a995b0_sadnadbregister1_admin;Pwd=Sadna123"/>
+	</connectionStrings>
 </configuration>
