--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -24,6 +24,7 @@
 		<add key="SystemManagerPass" value="AS87654askj"/>
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
+		<add key="RunLoadData" value="True"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="MasterConnectionString" connectionString="Server=SQL5110.site4now.net;Database=db_a995b0_sadnadbregister1;Uid=db_a995b0_sadnadbregister1_admin;Pwd=Sadna123"/>
