--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -77,6 +77,7 @@
     <Compile Include="API\SignalR\SignalRServiceHost.cs" />
     <Compile Include="DataLayer\DatabaseContext.cs" />
     <Compile Include="DataLayer\DBHandler.cs" />
+    <Compile Include="DomainLayer\User\InitializeSystem.cs" />
     <Compile Include="DomainLayer\User\Macs.cs" />
     <Compile Include="ApplicationOptions.cs" />
     <Compile Include="DomainLayer\User\Bid.cs" />
@@ -110,9 +111,9 @@
     <Compile Include="DomainLayer\User\UserFacade.cs" />
     <Compile Include="ExternalServices\PaymentService.cs" />
     <Compile Include="ExternalServices\SupplierService.cs" />
-    <Compile Include="Migrations\20230525112942_Initial.cs" />
-    <Compile Include="Migrations\20230525112942_Initial.designer.cs">
-      <DependentUpon>20230525112942_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\20230527172457_Initial.cs" />
+    <Compile Include="Migrations\20230527172457_Initial.designer.cs">
+      <DependentUpon>20230527172457_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DatabaseContextModelSnapshot.cs" />
     <Compile Include="Program.cs" />
