added csproj file

--- a/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
+++ b/src/sadna-backend/SadnaExpress/SadnaExpress.csproj
@@ -77,6 +77,7 @@
     <Compile Include="API\SignalR\SignalRServiceHost.cs" />
     <Compile Include="DataLayer\DatabaseContext.cs" />
     <Compile Include="DataLayer\DBHandler.cs" />
+    <Compile Include="DomainLayer\Store\Policy\ConditionDB.cs" />
     <Compile Include="DomainLayer\User\InitializeSystem.cs" />
     <Compile Include="DomainLayer\User\Macs.cs" />
     <Compile Include="ApplicationOptions.cs" />
@@ -111,11 +112,11 @@
     <Compile Include="DomainLayer\User\UserFacade.cs" />
     <Compile Include="ExternalServices\PaymentService.cs" />
     <Compile Include="ExternalServices\SupplierService.cs" />
-    <Compile Include="Migrations\20230603120028_Initial.cs" />
-    <Compile Include="Migrations\20230603120028_Initial.designer.cs">
-      <DependentUpon>20230603120028_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\20230604160742_Initial.cs" />
+    <Compile Include="Migrations\20230604160742_Initial.designer.cs">
+      <DependentUpon>20230604160742_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\DatabaseTestsContextModelSnapshot.cs" />
+    <Compile Include="Migrations\DatabaseContextModelSnapshot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="ServiceLayer\IStoreManager.cs" />
@@ -194,7 +195,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
