--- a/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Acceptance Tests\GuestAT.cs" />
     <Compile Include="Integration Tests\CheckPurchaseConditionIT.cs" />
     <Compile Include="Integration Tests\EditStoreInventoryIT.cs" />
+    <Compile Include="Integration Tests\ExternalServicesIT.cs" />
     <Compile Include="Integration Tests\GetCartItemsIT.cs" />
     <Compile Include="Integration Tests\PurchaseIT.cs" />
     <Compile Include="Integration Tests\StoreManagementIT.cs" />
