--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -25,6 +25,7 @@
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
 		<add key="RunLoadData" value="True"/>
+		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="MasterConnectionString" connectionString="Server=SQL5110.site4now.net;Database=db_a995b0_sadnadbregister1;Uid=db_a995b0_sadnadbregister1_admin;Pwd=Sadna123"/>
