arrange config file

--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -12,10 +12,6 @@
 		<add key="Host" value="localhost"/>
 		<add key="ApiPort" value="8080"/>
 		<add key="SignalRPort" value="8081"/>
-		<add key="DataBaseServer" value="SQL5110.site4now.net"/>
-		<add key="DataBaseName" value="db_a995b0_sadnadbregister1"/>
-		<add key="DataBaseUIdAuthentication" value="db_a995b0_sadnadbregister1_admin"/>
-		<add key="DataBasePwdAuthentication" value="Sadna123"/>
 		<add key="PaymentServiceURL" value="https://php-server-try.000webhostapp.com/"/>
 		<add key="SupplierServiceURL" value="https://php-server-try.000webhostapp.com/"/>
 		<add key="SystemManagerEmail" value="RotemSela@gmail.com"/>
@@ -25,9 +21,11 @@
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
 		<add key="RunLoadData" value="True"/>
+		<add key="StateFileConfig" value=""/>
 		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="MasterConnectionString" connectionString="Server=SQL5110.site4now.net;Database=db_a995b0_sadnadbregister1;Uid=db_a995b0_sadnadbregister1_admin;Pwd=Sadna123"/>
+		<add name="MasterConnectionString" connectionString="Server=SQL5106.site4now.net;Database=db_a995b0_sadnadbver4;Uid=db_a995b0_sadnadbver4_admin;Pwd=Sadna123"/>
 	</connectionStrings>
 </configuration>
+
