--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ bin
 /src/Version 1/.vs/SadnaExpress/v17/TestStore/0
 /src/Version 1/packages/MSTest.TestAdapter.2.2.7
 /src/Version 1/.vs/SadnaExpress/config
+/src/sadna-backend/SadnaExpress
