new db connection

--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -21,11 +21,11 @@
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
 		<add key="RunLoadData" value="True"/>
-		<add key="StateFileConfig" value=""/>
+		<add key="StateFileConfig" value="data2"/>
 		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="MasterConnectionString" connectionString="Server=SQL5106.site4now.net;Database=db_a995b0_sadnadbver4;Uid=db_a995b0_sadnadbver4_admin;Pwd=Sadna123"/>
+		<add name="MasterConnectionString" connectionString="Server=SQL5097.site4now.net;Database=db_a995b0_sadnadbve4r;Uid=db_a995b0_sadnadbve4r_admin;Pwd=Sadna123" />
 	</connectionStrings>
 </configuration>
 
