--- a/src/sadna-front/package.json
+++ b/src/sadna-front/package.json
@@ -10,8 +10,10 @@
     "@types/signalr-no-jquery": "^0.1.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-promise-tracker": "^2.1.1",
     "react-redux": "^8.0.5",
