system is not loading if there's issue in config/loaddata

--- a/src/sadna-backend/SadnaExpress/app.config
+++ b/src/sadna-backend/SadnaExpress/app.config
@@ -21,7 +21,7 @@
 		<add key="InitTradingSystem" value="True"/>
 		<add key="StartWithCleanDB" value="True"/>
 		<add key="RunLoadData" value="True"/>
-		<add key="StateFileConfig" value="data2"/>
+		<add key="StateFileConfig" value=""/>
 		<add key="TestDB" value="Data Source=databaseTests.db"/>
 	</appSettings>
 	<connectionStrings>
