--- a/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
+++ b/src/sadna-backend/SadnaExpressTests/SadnaExpressTests.csproj
@@ -60,8 +60,9 @@
     <Compile Include="Integration Tests\TradingSystemIT.cs" />
     <Compile Include="Integration Tests\ValidCartContentIT.cs" />
     <Compile Include="Persistence Tests\StoresDBtests.cs" />
+    <Compile Include="Persistence Tests\TradingSystemPT.cs" />
     <Compile Include="Persistence Tests\UsersDBtests.cs" />
-	  <Compile Include="Unit Tests\BidsUT.cs" />
+    <Compile Include="Unit Tests\BidsUT.cs" />
     <Compile Include="Unit Tests\DiscountPolicyUT.cs" />
     <Compile Include="Unit Tests\NotificationUT.cs" />
     <Compile Include="Unit Tests\OrderUT.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit Tests\ShoppingCartUT.cs" />
     <Compile Include="Unit Tests\StoreOwnerUT.cs" />
+    <Compile Include="Unit Tests\TradingSystemUT.cs" />
     <Compile Include="Unit Tests\UserFacadeUT.cs" />
     <Compile Include="Unit Tests\StoreUT.cs" />
   </ItemGroup>
